--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ description: >
   This is PMEAS's API GithubPages Documentation Site.
 
 baseurl: "newdocsblog/" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "https://nyariati.github.io/" # the base hostname & protocol for your site
 
 author:
   fullname: Gergely Sipos
